test/TestSuite/Syntax/Errors/ts_no_tracking_scenario.tjp
project "Test" 2011-05-15 +1w

resource r "R"
task t "T"

# MARK: error 7 ts_no_tracking_scenario
timesheet r 2011-05-15 +1w {
  task t {
    work 80%
    priority 1001
    end 2011-05-18
    status green "Lots of work done"
  }
}
